# Veloxr

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Readme.md  compile_commands.json  test_out
cmake/: veloxrConfig.cmake.in
conan/: conanfile.py  fix_mac_libs.cmake  mac_build_and_publish.sh  mac_build_local.sh  profile_mac_armv8  profile_win2019  profile_win2022  win_build_and_publish.sh  win_local_build.sh
spirv/: frag.spv  frag_mac.spv  vert.spv
src/: .VLogger.h.swp  CommandUtils.cpp  CommandUtils.h  Common.h  DataUtils.h  EntityManager.cpp  EntityManager.h  GPUTexture.cpp  GPUTexture.h  MetalHelper.mm  MetalSurfaceHelper.mm  OrthoCam.cpp  OrthoCam.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderEntity.cpp  RenderEntity.h  TextureTiling.cpp  TextureTiling.h  TileManager.h  UniqueOrderedNumber.h  VLogger.h  VVShaderStageData.cpp  VVShaderStageData.h  VVTexture.cpp  VVTexture.h  VVUtils.cpp  VVUtils.h  Vertex.h  device.cpp  device.h  imagedata.h  main.cpp  oiioimagedata.cpp  oiioimagedata.h  renderer.cpp  renderer.cpp~  renderer.h  test.h  texture.cpp  (+2 more)
src/DiskCache/: RequestQueue.cpp  RequestQueue.h
src/shaders/: passthrough.frag  passthrough.vert  passthrough_mac.frag
